--- a/index.html
+++ b/index.html
@@ -3,307 +3,335 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>VYBE | Teen Innovation</title>
+<title>FocusFlow | Level Up Yuh Learning</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-:root {
-    --true-blue: #1E90FF;
-    --sky-blue: #87CEEB;
-    --navy-blue: #0B3D91;
-    --white: #ffffff;
+:root{
+--true-blue:#1E90FF;
+--sky-blue:#87CEEB;
+--navy-blue:#0B3D91;
+--white:#ffffff;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    scroll-behavior: smooth;
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:'Poppins',sans-serif;
+scroll-behavior:smooth;
 }
 
-body {
-    background: var(--white);
-    color: var(--navy-blue);
-    overflow-x: hidden;
+body{
+background:var(--white);
+color:var(--navy-blue);
+overflow-x:hidden;
 }
 
 /* NAVBAR */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 8%;
-    background: var(--navy-blue);
-    color: var(--white);
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
+nav{
+position:fixed;
+width:100%;
+top:0;
+left:0;
+background:var(--navy-blue);
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:15px 8%;
+z-index:1000;
+color:white;
 }
 
-.logo {
-    font-weight: 700;
-    font-size: 1.6rem;
-    letter-spacing: 2px;
+.logo{
+font-weight:700;
+font-size:1.5rem;
+letter-spacing:2px;
 }
 
-.nav-links {
-    list-style: none;
-    display: flex;
-    gap: 30px;
+nav ul{
+list-style:none;
+display:flex;
+gap:25px;
 }
 
-.nav-links a {
-    color: var(--white);
-    text-decoration: none;
-    transition: 0.3s ease;
+nav ul li a{
+color:white;
+text-decoration:none;
+transition:.3s;
+font-weight:500;
 }
 
-.nav-links a:hover {
-    color: var(--sky-blue);
-}
-
-.hamburger {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-}
-
-.hamburger span {
-    height: 3px;
-    width: 25px;
-    background: white;
-    margin: 4px 0;
+nav ul li a:hover{
+color:var(--sky-blue);
 }
 
 /* HERO */
-.hero {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(135deg, var(--true-blue), var(--sky-blue));
-    color: var(--white);
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-    padding: 0 20px;
+.hero{
+height:100vh;
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+text-align:center;
+background:linear-gradient(135deg,var(--true-blue),var(--sky-blue));
+color:white;
+padding:0 20px;
+position:relative;
+overflow:hidden;
 }
 
-.hero-content h1 {
-    font-size: 3rem;
-    animation: fadeIn 1.2s ease forwards;
-    opacity: 0;
+.hero h1{
+font-size:3rem;
+animation:fadeUp 1.5s ease forwards;
+opacity:0;
 }
 
-.hero-content p {
-    margin-top: 15px;
-    font-size: 1.1rem;
-    animation: fadeIn 2s ease forwards;
-    opacity: 0;
+.hero p{
+margin-top:15px;
+max-width:600px;
+animation:fadeUp 2.2s ease forwards;
+opacity:0;
 }
 
-.cta-btn {
-    margin-top: 25px;
-    padding: 12px 30px;
-    border: none;
-    border-radius: 30px;
-    background: var(--navy-blue);
-    color: var(--white);
-    font-weight: 600;
-    cursor: pointer;
-    transition: 0.4s ease;
+.btn{
+margin-top:25px;
+padding:12px 28px;
+border:none;
+border-radius:30px;
+background:var(--navy-blue);
+color:white;
+cursor:pointer;
+transition:.3s;
+font-weight:600;
 }
 
-.cta-btn:hover {
-    transform: scale(1.08);
-    background: var(--white);
-    color: var(--navy-blue);
+.btn:hover{
+transform:scale(1.08);
+background:white;
+color:var(--navy-blue);
 }
 
-/* Floating Animated Circles */
-.circle {
-    position: absolute;
-    border-radius: 50%;
-    background: white;
-    opacity: 0.08;
-    animation: float 8s infinite ease-in-out;
+@keyframes fadeUp{
+to{opacity:1;transform:translateY(0);}
+from{opacity:0;transform:translateY(30px);}
 }
 
-.circle1 { width: 300px; height: 300px; top: 10%; left: 10%; }
-.circle2 { width: 200px; height: 200px; bottom: 10%; right: 15%; animation-delay: 2s; }
+/* FLOATING CIRCLES */
+.circle{
+position:absolute;
+border-radius:50%;
+background:white;
+opacity:.08;
+animation:float 8s infinite ease-in-out;
+}
 
-@keyframes float {
-    0% { transform: translateY(0); }
-    50% { transform: translateY(-50px); }
-    100% { transform: translateY(0); }
+.circle1{width:300px;height:300px;top:10%;left:10%;}
+.circle2{width:200px;height:200px;bottom:10%;right:15%;animation-delay:2s;}
+
+@keyframes float{
+0%{transform:translateY(0);}
+50%{transform:translateY(-40px);}
+100%{transform:translateY(0);}
 }
 
 /* SECTIONS */
-section {
-    padding: 100px 10%;
-    text-align: center;
+section{
+padding:120px 10%;
+text-align:center;
 }
 
-.features {
-    background: var(--white);
+.alt{
+background:var(--navy-blue);
+color:white;
 }
 
-.feature-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 40px;
-    margin-top: 50px;
+/* FEATURES */
+.features-grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:30px;
+margin-top:50px;
 }
 
-.feature-card {
-    background: var(--sky-blue);
-    padding: 30px;
-    border-radius: 20px;
-    transition: 0.4s ease;
-    cursor: pointer;
+.card{
+background:var(--sky-blue);
+padding:30px;
+border-radius:20px;
+transition:.4s;
+cursor:pointer;
 }
 
-.feature-card:hover {
-    transform: translateY(-15px) scale(1.03);
-    background: var(--true-blue);
-    color: var(--white);
-    box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+.card:hover{
+background:var(--true-blue);
+color:white;
+transform:translateY(-12px) scale(1.03);
+box-shadow:0 20px 30px rgba(0,0,0,.2);
 }
 
-.about {
-    background: var(--navy-blue);
-    color: var(--white);
+/* TASK MANAGER */
+.task-box{
+max-width:600px;
+margin:40px auto;
 }
 
-.contact {
-    background: var(--white);
+.task-box input{
+padding:10px;
+width:70%;
+border:2px solid var(--true-blue);
+border-radius:8px;
+}
+
+.task-box button{
+padding:10px 15px;
+margin-left:10px;
+background:var(--true-blue);
+color:white;
+border:none;
+border-radius:8px;
+cursor:pointer;
+}
+
+.task-box ul{
+list-style:none;
+margin-top:20px;
+text-align:left;
+}
+
+.task-box li{
+padding:10px;
+margin-bottom:8px;
+background:#f0f8ff;
+border-radius:6px;
+display:flex;
+justify-content:space-between;
+}
+
+/* TIMER */
+.timer{
+font-size:2rem;
+margin-top:20px;
+font-weight:bold;
 }
 
 /* FOOTER */
-footer {
-    background: var(--navy-blue);
-    color: var(--white);
-    padding: 20px;
-}
-
-/* SCROLL REVEAL */
-.reveal {
-    opacity: 0;
-    transform: translateY(40px);
-    transition: 1s ease;
-}
-
-.reveal.active {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-/* MOBILE */
-@media(max-width: 768px) {
-    .nav-links {
-        position: absolute;
-        top: 70px;
-        right: 0;
-        background: var(--navy-blue);
-        width: 200px;
-        flex-direction: column;
-        text-align: center;
-        padding: 20px 0;
-        display: none;
-    }
-
-    .nav-links.active {
-        display: flex;
-    }
-
-    .hamburger {
-        display: flex;
-    }
+footer{
+background:var(--navy-blue);
+color:white;
+padding:25px;
+text-align:center;
 }
 </style>
 </head>
 <body>
 
-<nav class="navbar">
-    <div class="logo">VYBE</div>
-    <ul class="nav-links">
-        <li><a href="#features">Features</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Join</a></li>
-    </ul>
-    <div class="hamburger" id="hamburger">
-        <span></span><span></span><span></span>
-    </div>
+<nav>
+<div class="logo">FocusFlow</div>
+<ul>
+<li><a href="#about">About</a></li>
+<li><a href="#tools">Study Tools</a></li>
+<li><a href="#tasks">Task Manager</a></li>
+<li><a href="#music">Lobby Music</a></li>
+</ul>
 </nav>
 
 <header class="hero">
-    <div class="circle circle1"></div>
-    <div class="circle circle2"></div>
-
-    <div class="hero-content">
-        <h1>Level Up Your Vibes</h1>
-        <p>The ultimate teen platform built for connection, creativity & convenience.</p>
-        <button class="cta-btn">Get Started</button>
-    </div>
+<div class="circle circle1"></div>
+<div class="circle circle2"></div>
+<h1>FocusFlow</h1>
+<p>Real focus. Real grades. Real improvement.  
+“Serious study time now — but wi still keep di vibe nice!”</p>
+<button class="btn" onclick="document.getElementById('tools').scrollIntoView()">Start Improving</button>
 </header>
 
-<section id="features" class="features reveal">
-    <h2>Why Teens Love It</h2>
-    <div class="feature-grid">
-        <div class="feature-card">
-            <h3>Social Connect</h3>
-            <p>Build your circle. Share your vibe. Stay connected.</p>
-        </div>
-        <div class="feature-card">
-            <h3>Study Boost</h3>
-            <p>Smart tools to help you stay ahead effortlessly.</p>
-        </div>
-        <div class="feature-card">
-            <h3>Fun Mode</h3>
-            <p>Interactive experiences designed for real enjoyment.</p>
-        </div>
-    </div>
+<section id="about">
+<h2>Wah Dis?</h2>
+<p>
+FocusFlow built fi students who serious bout dem future.  
+If yuh waan better grades, less procrastination, and more confidence — dis a di place.  
+“A who nah go want level up dem grades?”
+</p>
 </section>
 
-<section id="about" class="about reveal">
-    <h2>Built For The Next Generation</h2>
-    <p>Designed with style, speed, and simplicity in mind. VYBE gives teens a space to express, explore, and excel.</p>
+<section id="tools" class="alt">
+<h2>Study Tools</h2>
+<div class="features-grid">
+<div class="card">
+<h3>Pomodoro Focus Timer</h3>
+<p>25 minutes hard focus. 5 minute break. Repeat. Improve memory retention.</p>
+<div class="timer" id="timer">25:00</div>
+<button class="btn" onclick="startTimer()">Start</button>
+</div>
+
+<div class="card">
+<h3>Smart Study Strategy</h3>
+<p>Active recall. Spaced repetition. Practice questions daily.  
+“Consistency beat cramming every time.”</p>
+</div>
+
+<div class="card">
+<h3>Goal Tracker</h3>
+<p>Set weekly grade targets and track progress. Discipline build success.</p>
+</div>
+</div>
 </section>
 
-<section id="contact" class="contact reveal">
-    <h2>Be First To Experience It</h2>
-    <button class="cta-btn">Join The Movement</button>
+<section id="tasks">
+<h2>Task Manager</h2>
+<p>Write wah yuh need fi do today — no more forgetting homework!</p>
+
+<div class="task-box">
+<input type="text" id="taskInput" placeholder="Add new task...">
+<button onclick="addTask()">Add</button>
+<ul id="taskList"></ul>
+</div>
+</section>
+
+<section id="music" class="alt">
+<h2>Study Lobby Music</h2>
+<p>Soft lofi instrumental fi keep yuh calm and focused.</p>
+
+<audio controls loop>
+<source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_6a4a4e5f68.mp3?filename=lofi-study-112191.mp3" type="audio/mpeg">
+</audio>
 </section>
 
 <footer>
-    © 2026 VYBE | Designed for Teens
+© 2026 FocusFlow | Copyright by Zak & Micah Ltd
 </footer>
 
 <script>
-// Mobile Menu
-const hamburger = document.getElementById('hamburger');
-const navLinks = document.querySelector('.nav-links');
-
-hamburger.addEventListener('click', () => {
-    navLinks.classList.toggle('active');
-});
-
-// Scroll Reveal Animation
-function reveal() {
-    const reveals = document.querySelectorAll('.reveal');
-    reveals.forEach(el => {
-        const windowHeight = window.innerHeight;
-        const elementTop = el.getBoundingClientRect().top;
-        const visible = 100;
-        if (elementTop < windowHeight - visible) {
-            el.classList.add('active');
-        }
-    });
+/* TASK MANAGER */
+function addTask(){
+let input=document.getElementById("taskInput");
+let task=input.value;
+if(task==="") return;
+let li=document.createElement("li");
+li.innerHTML=task + " <button onclick='this.parentElement.remove()'>Done</button>";
+document.getElementById("taskList").appendChild(li);
+input.value="";
 }
 
-window.addEventListener('scroll', reveal);
+/* TIMER */
+let time=1500;
+let interval;
+
+function startTimer(){
+clearInterval(interval);
+interval=setInterval(()=>{
+let minutes=Math.floor(time/60);
+let seconds=time%60;
+seconds=seconds<10?"0"+seconds:seconds;
+document.getElementById("timer").innerText=minutes+":"+seconds;
+time--;
+if(time<0){
+clearInterval(interval);
+alert("Break Time! Yuh earn it!");
+time=1500;
+}
+},1000);
+}
 </script>
 
 </body>
